Bug 158412 - useless (?) overflow button in message area of quick search bar
Summary: useless (?) overflow button in message area of quick search bar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Find-Search
  Show dependency treegraph
 
Reported: 2023-11-28 09:25 UTC by stragu
Modified: 2023-12-01 12:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (6.94 KB, image/png)
2023-11-28 09:26 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-11-28 09:25:47 UTC
Since the quick search message improvements in 97d3d4f371f82704dba907975e6cfdaac456fe4d, there is a guillemet / double angle bracket icon (it's the same as the toolbar overflow icon) in the message area when no message is displayed, in a search with several results.

Steps:
1. Open Writer or Calc
2. Input the word "test" in several paragraphs or cells
3. Ctrl + F to bring up the search bar
4. Search for "test", press enter several times

Result: button displayed when no message; clicking it brings up an empty popup.

Repro in:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 86c682273d907c77404637c89e584047de1c1099
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Heiko, can you please have a look?
Comment 1 stragu 2023-11-28 09:26:02 UTC
Created attachment 191072 [details]
screenshot
Comment 2 Heiko Tietze 2023-11-28 10:26:52 UTC
(In reply to Stéphane Guillou (stragu) from comment #0)
> Heiko, can you please have a look?
Okay
Comment 3 m_a_riosv 2023-11-28 10:27:45 UTC
Reproducible
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 86c682273d907c77404637c89e584047de1c1099
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

regression from
Version: 7.6.3.2 (X86_64) / LibreOffice Community
Build ID: 29d686fea9f6705b262d369fede658f824154cc0
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 4 Heiko Tietze 2023-11-29 13:21:15 UTC
Don't see the chevron with kf5 nor gtk3 but with gen.
Comment 5 Heiko Tietze 2023-11-29 13:32:12 UTC
The patch for bug 156227 also made the quickfind bar accessible so this label would be announced by screen readers. By doing so the content became hidden, which made the chevron appear. Patch submitted (just always show even with an empty string).
Comment 6 Commit Notification 2023-11-30 10:42:40 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48ba98a51f029cd14b5d982dab36eb581d40fef3

Resolves tdf#158412 - Don't show chevron in quick find bar

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 stragu 2023-12-01 12:45:45 UTC
Fix verified in:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 619500d6919c227e734b119481a4b334972e0b7b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Heiko!