Resolves tdf#158412 - Don't show chevron in quick find bar

Change-Id: I50f0bb7d8a406b77baccc626ca99b656d170ecf1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160093
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>